--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.gitignore
 D20230724/node_modules
 D20230724/package-lock.json
 D20230721/bootstrap-5.3.0-dist
 D20230721/.idea
 .idea
+AU9$DES3K209A)FPTFZ`GKJ.png
+D20230725/node_modules
+D20230725/package-lock.json
+node_modules
+package-lock.json
