--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-"build": "vite build"
-},
+    "build": "vite build"
+  },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0"
   },
   "devDependencies": {
     "sass": "^1.64.1",
