--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
-    "jquery": "^3.7.0"
+    "jquery": "^3.7.0",
+    "js-confetti": "^0.11.0"
   },
   "devDependencies": {
     "sass": "^1.64.1",
